parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    int

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> RECEBA PARAMETROS DEVOLVA VARLIST HORADOSHOW CMDS AQUIACABOU
Rule 2     VARLIST -> variavel virgula VARLIST
Rule 3     VARLIST -> variavel
Rule 4     VARIAVEL -> variavel
Rule 5     VARIAVELOUEXPRESSAO -> VARIAVEL
Rule 6     VARIAVELOUEXPRESSAO -> EXPRESSAO
Rule 7     VARIAVELOUNUMERO -> VARIAVEL
Rule 8     VARIAVELOUNUMERO -> numero
Rule 9     PARAMETROS -> variavel igual numero virgula PARAMETROS
Rule 10    PARAMETROS -> variavel igual numero
Rule 11    CMDS -> CMD CMDS
Rule 12    CMDS -> CMD
Rule 13    CMD -> VARIAVEL igual variavel
Rule 14    CMD -> VARIAVEL igual numero
Rule 15    CMD -> VARIAVEL igual OPERACAO
Rule 16    CMD -> ENQUANTO VARIAVELOUEXPRESSAO FACA CMDS FIMENQUANTO
Rule 17    CMD -> FUNCAO
Rule 18    CMD -> CONDICIONAL
Rule 19    OPERACAO -> VARIAVELOUNUMERO mais VARIAVELOUNUMERO
Rule 20    OPERACAO -> VARIAVELOUNUMERO vezes VARIAVELOUNUMERO
Rule 21    OPERACAO -> VARIAVELOUNUMERO menos VARIAVELOUNUMERO
Rule 22    OPERACAO -> VARIAVELOUNUMERO dividido VARIAVELOUNUMERO
Rule 23    EXPRESSAO -> VARIAVELOUNUMERO maiorque VARIAVELOUNUMERO
Rule 24    EXPRESSAO -> VARIAVELOUNUMERO menorque VARIAVELOUNUMERO
Rule 25    EXPRESSAO -> VARIAVELOUNUMERO maiorouigualque VARIAVELOUNUMERO
Rule 26    EXPRESSAO -> VARIAVELOUNUMERO menorouigualque VARIAVELOUNUMERO
Rule 27    EXPRESSAO -> VARIAVELOUNUMERO comparacao VARIAVELOUNUMERO
Rule 28    FUNCAO -> ZERO abrePa variavel fechaPa
Rule 29    FUNCAO -> EXECUTE abrePa VARIAVELOUNUMERO virgula CMDS fechaPa
Rule 30    CONDICIONAL -> SE VARIAVELOUEXPRESSAO ENTAO CMDS FIMSE
Rule 31    CONDICIONAL -> SE VARIAVELOUEXPRESSAO ENTAO CMDS SENAO CMDS FIMSE

Terminals, with rules where they appear

AQUIACABOU           : 1
DEVOLVA              : 1
ENQUANTO             : 16
ENTAO                : 30 31
EXECUTE              : 29
FACA                 : 16
FIMENQUANTO          : 16
FIMSE                : 30 31
HORADOSHOW           : 1
RECEBA               : 1
SE                   : 30 31
SENAO                : 31
ZERO                 : 28
abrePa               : 28 29
comparacao           : 27
dividido             : 22
error                : 
fechaPa              : 28 29
igual                : 9 10 13 14 15
int                  : 
maiorouigualque      : 25
maiorque             : 23
mais                 : 19
menorouigualque      : 26
menorque             : 24
menos                : 21
numero               : 8 9 10 14
variavel             : 2 3 4 9 10 13 28
vezes                : 20
virgula              : 2 9 29

Nonterminals, with rules where they appear

CMD                  : 11 12
CMDS                 : 1 11 16 29 30 31 31
CONDICIONAL          : 18
EXPRESSAO            : 6
FUNCAO               : 17
OPERACAO             : 15
PARAMETROS           : 1 9
PROGRAM              : 0
VARIAVEL             : 5 7 13 14 15
VARIAVELOUEXPRESSAO  : 16 30 31
VARIAVELOUNUMERO     : 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 29
VARLIST              : 1 2


state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . RECEBA PARAMETROS DEVOLVA VARLIST HORADOSHOW CMDS AQUIACABOU

    RECEBA          shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> RECEBA . PARAMETROS DEVOLVA VARLIST HORADOSHOW CMDS AQUIACABOU
    (9) PARAMETROS -> . variavel igual numero virgula PARAMETROS
    (10) PARAMETROS -> . variavel igual numero

    variavel        shift and go to state 4

    PARAMETROS                     shift and go to state 3

state 3

    (1) PROGRAM -> RECEBA PARAMETROS . DEVOLVA VARLIST HORADOSHOW CMDS AQUIACABOU

    DEVOLVA         shift and go to state 5


state 4

    (9) PARAMETROS -> variavel . igual numero virgula PARAMETROS
    (10) PARAMETROS -> variavel . igual numero

    igual           shift and go to state 6


state 5

    (1) PROGRAM -> RECEBA PARAMETROS DEVOLVA . VARLIST HORADOSHOW CMDS AQUIACABOU
    (2) VARLIST -> . variavel virgula VARLIST
    (3) VARLIST -> . variavel

    variavel        shift and go to state 8

    VARLIST                        shift and go to state 7

state 6

    (9) PARAMETROS -> variavel igual . numero virgula PARAMETROS
    (10) PARAMETROS -> variavel igual . numero

    numero          shift and go to state 9


state 7

    (1) PROGRAM -> RECEBA PARAMETROS DEVOLVA VARLIST . HORADOSHOW CMDS AQUIACABOU

    HORADOSHOW      shift and go to state 10


state 8

    (2) VARLIST -> variavel . virgula VARLIST
    (3) VARLIST -> variavel .

    virgula         shift and go to state 11
    HORADOSHOW      reduce using rule 3 (VARLIST -> variavel .)


state 9

    (9) PARAMETROS -> variavel igual numero . virgula PARAMETROS
    (10) PARAMETROS -> variavel igual numero .

    virgula         shift and go to state 12
    DEVOLVA         reduce using rule 10 (PARAMETROS -> variavel igual numero .)


state 10

    (1) PROGRAM -> RECEBA PARAMETROS DEVOLVA VARLIST HORADOSHOW . CMDS AQUIACABOU
    (11) CMDS -> . CMD CMDS
    (12) CMDS -> . CMD
    (13) CMD -> . VARIAVEL igual variavel
    (14) CMD -> . VARIAVEL igual numero
    (15) CMD -> . VARIAVEL igual OPERACAO
    (16) CMD -> . ENQUANTO VARIAVELOUEXPRESSAO FACA CMDS FIMENQUANTO
    (17) CMD -> . FUNCAO
    (18) CMD -> . CONDICIONAL
    (4) VARIAVEL -> . variavel
    (28) FUNCAO -> . ZERO abrePa variavel fechaPa
    (29) FUNCAO -> . EXECUTE abrePa VARIAVELOUNUMERO virgula CMDS fechaPa
    (30) CONDICIONAL -> . SE VARIAVELOUEXPRESSAO ENTAO CMDS FIMSE
    (31) CONDICIONAL -> . SE VARIAVELOUEXPRESSAO ENTAO CMDS SENAO CMDS FIMSE

    ENQUANTO        shift and go to state 17
    variavel        shift and go to state 16
    ZERO            shift and go to state 20
    EXECUTE         shift and go to state 21
    SE              shift and go to state 22

    CMDS                           shift and go to state 13
    CMD                            shift and go to state 14
    VARIAVEL                       shift and go to state 15
    FUNCAO                         shift and go to state 18
    CONDICIONAL                    shift and go to state 19

state 11

    (2) VARLIST -> variavel virgula . VARLIST
    (2) VARLIST -> . variavel virgula VARLIST
    (3) VARLIST -> . variavel

    variavel        shift and go to state 8

    VARLIST                        shift and go to state 23

state 12

    (9) PARAMETROS -> variavel igual numero virgula . PARAMETROS
    (9) PARAMETROS -> . variavel igual numero virgula PARAMETROS
    (10) PARAMETROS -> . variavel igual numero

    variavel        shift and go to state 4

    PARAMETROS                     shift and go to state 24

state 13

    (1) PROGRAM -> RECEBA PARAMETROS DEVOLVA VARLIST HORADOSHOW CMDS . AQUIACABOU

    AQUIACABOU      shift and go to state 25


state 14

    (11) CMDS -> CMD . CMDS
    (12) CMDS -> CMD .
    (11) CMDS -> . CMD CMDS
    (12) CMDS -> . CMD
    (13) CMD -> . VARIAVEL igual variavel
    (14) CMD -> . VARIAVEL igual numero
    (15) CMD -> . VARIAVEL igual OPERACAO
    (16) CMD -> . ENQUANTO VARIAVELOUEXPRESSAO FACA CMDS FIMENQUANTO
    (17) CMD -> . FUNCAO
    (18) CMD -> . CONDICIONAL
    (4) VARIAVEL -> . variavel
    (28) FUNCAO -> . ZERO abrePa variavel fechaPa
    (29) FUNCAO -> . EXECUTE abrePa VARIAVELOUNUMERO virgula CMDS fechaPa
    (30) CONDICIONAL -> . SE VARIAVELOUEXPRESSAO ENTAO CMDS FIMSE
    (31) CONDICIONAL -> . SE VARIAVELOUEXPRESSAO ENTAO CMDS SENAO CMDS FIMSE

    AQUIACABOU      reduce using rule 12 (CMDS -> CMD .)
    FIMENQUANTO     reduce using rule 12 (CMDS -> CMD .)
    FIMSE           reduce using rule 12 (CMDS -> CMD .)
    SENAO           reduce using rule 12 (CMDS -> CMD .)
    fechaPa         reduce using rule 12 (CMDS -> CMD .)
    ENQUANTO        shift and go to state 17
    variavel        shift and go to state 16
    ZERO            shift and go to state 20
    EXECUTE         shift and go to state 21
    SE              shift and go to state 22

    CMD                            shift and go to state 14
    CMDS                           shift and go to state 26
    VARIAVEL                       shift and go to state 15
    FUNCAO                         shift and go to state 18
    CONDICIONAL                    shift and go to state 19

state 15

    (13) CMD -> VARIAVEL . igual variavel
    (14) CMD -> VARIAVEL . igual numero
    (15) CMD -> VARIAVEL . igual OPERACAO

    igual           shift and go to state 27


state 16

    (4) VARIAVEL -> variavel .

    igual           reduce using rule 4 (VARIAVEL -> variavel .)
    FACA            reduce using rule 4 (VARIAVEL -> variavel .)
    maiorque        reduce using rule 4 (VARIAVEL -> variavel .)
    menorque        reduce using rule 4 (VARIAVEL -> variavel .)
    maiorouigualque reduce using rule 4 (VARIAVEL -> variavel .)
    menorouigualque reduce using rule 4 (VARIAVEL -> variavel .)
    comparacao      reduce using rule 4 (VARIAVEL -> variavel .)
    ENTAO           reduce using rule 4 (VARIAVEL -> variavel .)
    virgula         reduce using rule 4 (VARIAVEL -> variavel .)
    ENQUANTO        reduce using rule 4 (VARIAVEL -> variavel .)
    variavel        reduce using rule 4 (VARIAVEL -> variavel .)
    ZERO            reduce using rule 4 (VARIAVEL -> variavel .)
    EXECUTE         reduce using rule 4 (VARIAVEL -> variavel .)
    SE              reduce using rule 4 (VARIAVEL -> variavel .)
    AQUIACABOU      reduce using rule 4 (VARIAVEL -> variavel .)
    FIMENQUANTO     reduce using rule 4 (VARIAVEL -> variavel .)
    FIMSE           reduce using rule 4 (VARIAVEL -> variavel .)
    SENAO           reduce using rule 4 (VARIAVEL -> variavel .)
    fechaPa         reduce using rule 4 (VARIAVEL -> variavel .)


state 17

    (16) CMD -> ENQUANTO . VARIAVELOUEXPRESSAO FACA CMDS FIMENQUANTO
    (5) VARIAVELOUEXPRESSAO -> . VARIAVEL
    (6) VARIAVELOUEXPRESSAO -> . EXPRESSAO
    (4) VARIAVEL -> . variavel
    (23) EXPRESSAO -> . VARIAVELOUNUMERO maiorque VARIAVELOUNUMERO
    (24) EXPRESSAO -> . VARIAVELOUNUMERO menorque VARIAVELOUNUMERO
    (25) EXPRESSAO -> . VARIAVELOUNUMERO maiorouigualque VARIAVELOUNUMERO
    (26) EXPRESSAO -> . VARIAVELOUNUMERO menorouigualque VARIAVELOUNUMERO
    (27) EXPRESSAO -> . VARIAVELOUNUMERO comparacao VARIAVELOUNUMERO
    (7) VARIAVELOUNUMERO -> . VARIAVEL
    (8) VARIAVELOUNUMERO -> . numero

    variavel        shift and go to state 16
    numero          shift and go to state 32

    VARIAVELOUEXPRESSAO            shift and go to state 28
    VARIAVEL                       shift and go to state 29
    EXPRESSAO                      shift and go to state 30
    VARIAVELOUNUMERO               shift and go to state 31

state 18

    (17) CMD -> FUNCAO .

    ENQUANTO        reduce using rule 17 (CMD -> FUNCAO .)
    variavel        reduce using rule 17 (CMD -> FUNCAO .)
    ZERO            reduce using rule 17 (CMD -> FUNCAO .)
    EXECUTE         reduce using rule 17 (CMD -> FUNCAO .)
    SE              reduce using rule 17 (CMD -> FUNCAO .)
    AQUIACABOU      reduce using rule 17 (CMD -> FUNCAO .)
    FIMENQUANTO     reduce using rule 17 (CMD -> FUNCAO .)
    FIMSE           reduce using rule 17 (CMD -> FUNCAO .)
    SENAO           reduce using rule 17 (CMD -> FUNCAO .)
    fechaPa         reduce using rule 17 (CMD -> FUNCAO .)


state 19

    (18) CMD -> CONDICIONAL .

    ENQUANTO        reduce using rule 18 (CMD -> CONDICIONAL .)
    variavel        reduce using rule 18 (CMD -> CONDICIONAL .)
    ZERO            reduce using rule 18 (CMD -> CONDICIONAL .)
    EXECUTE         reduce using rule 18 (CMD -> CONDICIONAL .)
    SE              reduce using rule 18 (CMD -> CONDICIONAL .)
    AQUIACABOU      reduce using rule 18 (CMD -> CONDICIONAL .)
    FIMENQUANTO     reduce using rule 18 (CMD -> CONDICIONAL .)
    FIMSE           reduce using rule 18 (CMD -> CONDICIONAL .)
    SENAO           reduce using rule 18 (CMD -> CONDICIONAL .)
    fechaPa         reduce using rule 18 (CMD -> CONDICIONAL .)


state 20

    (28) FUNCAO -> ZERO . abrePa variavel fechaPa

    abrePa          shift and go to state 33


state 21

    (29) FUNCAO -> EXECUTE . abrePa VARIAVELOUNUMERO virgula CMDS fechaPa

    abrePa          shift and go to state 34


state 22

    (30) CONDICIONAL -> SE . VARIAVELOUEXPRESSAO ENTAO CMDS FIMSE
    (31) CONDICIONAL -> SE . VARIAVELOUEXPRESSAO ENTAO CMDS SENAO CMDS FIMSE
    (5) VARIAVELOUEXPRESSAO -> . VARIAVEL
    (6) VARIAVELOUEXPRESSAO -> . EXPRESSAO
    (4) VARIAVEL -> . variavel
    (23) EXPRESSAO -> . VARIAVELOUNUMERO maiorque VARIAVELOUNUMERO
    (24) EXPRESSAO -> . VARIAVELOUNUMERO menorque VARIAVELOUNUMERO
    (25) EXPRESSAO -> . VARIAVELOUNUMERO maiorouigualque VARIAVELOUNUMERO
    (26) EXPRESSAO -> . VARIAVELOUNUMERO menorouigualque VARIAVELOUNUMERO
    (27) EXPRESSAO -> . VARIAVELOUNUMERO comparacao VARIAVELOUNUMERO
    (7) VARIAVELOUNUMERO -> . VARIAVEL
    (8) VARIAVELOUNUMERO -> . numero

    variavel        shift and go to state 16
    numero          shift and go to state 32

    VARIAVELOUEXPRESSAO            shift and go to state 35
    VARIAVEL                       shift and go to state 29
    EXPRESSAO                      shift and go to state 30
    VARIAVELOUNUMERO               shift and go to state 31

state 23

    (2) VARLIST -> variavel virgula VARLIST .

    HORADOSHOW      reduce using rule 2 (VARLIST -> variavel virgula VARLIST .)


state 24

    (9) PARAMETROS -> variavel igual numero virgula PARAMETROS .

    DEVOLVA         reduce using rule 9 (PARAMETROS -> variavel igual numero virgula PARAMETROS .)


state 25

    (1) PROGRAM -> RECEBA PARAMETROS DEVOLVA VARLIST HORADOSHOW CMDS AQUIACABOU .

    $end            reduce using rule 1 (PROGRAM -> RECEBA PARAMETROS DEVOLVA VARLIST HORADOSHOW CMDS AQUIACABOU .)


state 26

    (11) CMDS -> CMD CMDS .

    AQUIACABOU      reduce using rule 11 (CMDS -> CMD CMDS .)
    FIMENQUANTO     reduce using rule 11 (CMDS -> CMD CMDS .)
    FIMSE           reduce using rule 11 (CMDS -> CMD CMDS .)
    SENAO           reduce using rule 11 (CMDS -> CMD CMDS .)
    fechaPa         reduce using rule 11 (CMDS -> CMD CMDS .)


state 27

    (13) CMD -> VARIAVEL igual . variavel
    (14) CMD -> VARIAVEL igual . numero
    (15) CMD -> VARIAVEL igual . OPERACAO
    (19) OPERACAO -> . VARIAVELOUNUMERO mais VARIAVELOUNUMERO
    (20) OPERACAO -> . VARIAVELOUNUMERO vezes VARIAVELOUNUMERO
    (21) OPERACAO -> . VARIAVELOUNUMERO menos VARIAVELOUNUMERO
    (22) OPERACAO -> . VARIAVELOUNUMERO dividido VARIAVELOUNUMERO
    (7) VARIAVELOUNUMERO -> . VARIAVEL
    (8) VARIAVELOUNUMERO -> . numero
    (4) VARIAVEL -> . variavel

    variavel        shift and go to state 37
    numero          shift and go to state 38

    VARIAVEL                       shift and go to state 36
    OPERACAO                       shift and go to state 39
    VARIAVELOUNUMERO               shift and go to state 40

state 28

    (16) CMD -> ENQUANTO VARIAVELOUEXPRESSAO . FACA CMDS FIMENQUANTO

    FACA            shift and go to state 41


state 29

    (5) VARIAVELOUEXPRESSAO -> VARIAVEL .
    (7) VARIAVELOUNUMERO -> VARIAVEL .

    FACA            reduce using rule 5 (VARIAVELOUEXPRESSAO -> VARIAVEL .)
    ENTAO           reduce using rule 5 (VARIAVELOUEXPRESSAO -> VARIAVEL .)
    maiorque        reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    menorque        reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    maiorouigualque reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    menorouigualque reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    comparacao      reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)


state 30

    (6) VARIAVELOUEXPRESSAO -> EXPRESSAO .

    FACA            reduce using rule 6 (VARIAVELOUEXPRESSAO -> EXPRESSAO .)
    ENTAO           reduce using rule 6 (VARIAVELOUEXPRESSAO -> EXPRESSAO .)


state 31

    (23) EXPRESSAO -> VARIAVELOUNUMERO . maiorque VARIAVELOUNUMERO
    (24) EXPRESSAO -> VARIAVELOUNUMERO . menorque VARIAVELOUNUMERO
    (25) EXPRESSAO -> VARIAVELOUNUMERO . maiorouigualque VARIAVELOUNUMERO
    (26) EXPRESSAO -> VARIAVELOUNUMERO . menorouigualque VARIAVELOUNUMERO
    (27) EXPRESSAO -> VARIAVELOUNUMERO . comparacao VARIAVELOUNUMERO

    maiorque        shift and go to state 42
    menorque        shift and go to state 43
    maiorouigualque shift and go to state 44
    menorouigualque shift and go to state 45
    comparacao      shift and go to state 46


state 32

    (8) VARIAVELOUNUMERO -> numero .

    maiorque        reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    menorque        reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    maiorouigualque reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    menorouigualque reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    comparacao      reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    virgula         reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    FACA            reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    ENTAO           reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    ENQUANTO        reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    variavel        reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    ZERO            reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    EXECUTE         reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    SE              reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    AQUIACABOU      reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    FIMENQUANTO     reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    FIMSE           reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    SENAO           reduce using rule 8 (VARIAVELOUNUMERO -> numero .)
    fechaPa         reduce using rule 8 (VARIAVELOUNUMERO -> numero .)


state 33

    (28) FUNCAO -> ZERO abrePa . variavel fechaPa

    variavel        shift and go to state 47


state 34

    (29) FUNCAO -> EXECUTE abrePa . VARIAVELOUNUMERO virgula CMDS fechaPa
    (7) VARIAVELOUNUMERO -> . VARIAVEL
    (8) VARIAVELOUNUMERO -> . numero
    (4) VARIAVEL -> . variavel

    numero          shift and go to state 32
    variavel        shift and go to state 16

    VARIAVELOUNUMERO               shift and go to state 48
    VARIAVEL                       shift and go to state 36

state 35

    (30) CONDICIONAL -> SE VARIAVELOUEXPRESSAO . ENTAO CMDS FIMSE
    (31) CONDICIONAL -> SE VARIAVELOUEXPRESSAO . ENTAO CMDS SENAO CMDS FIMSE

    ENTAO           shift and go to state 49


state 36

    (7) VARIAVELOUNUMERO -> VARIAVEL .

    mais            reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    vezes           reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    menos           reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    dividido        reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    virgula         reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    FACA            reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    ENTAO           reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    ENQUANTO        reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    variavel        reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    ZERO            reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    EXECUTE         reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    SE              reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    AQUIACABOU      reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    FIMENQUANTO     reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    FIMSE           reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    SENAO           reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)
    fechaPa         reduce using rule 7 (VARIAVELOUNUMERO -> VARIAVEL .)


state 37

    (13) CMD -> VARIAVEL igual variavel .
    (4) VARIAVEL -> variavel .
